--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
                             <!-- <div class="col-xl-6 col-lg-6 mb-50">
                                 <div class="cta-img1 wow fadeInDown"><img src="assets/images/register1.jpg" alt="Img"></div>   \
                             </div> -->
-                            <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one">
+                            <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one" id="reg">
                                 <div class="img-holder">
                                     <img src="assets\images\Registration\Smash 2.0.jpg" alt=""><a href="assets\images\Registration\Smash 2.0.jpg" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
                                 </div>
                             </div>
-                            <div class="col-xl-6 col-lg-6">
+                            <div class="col-xl-6 col-lg-6" id="register">
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-5">
                                         <h2><span class="sub-title">SMASH 2.0<br><br></span></h2><!--<span class="fill-text"></span>-->
