--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
         </section><!--====== End Hero Section ======-->
             <!--======= Start Register Section ======-->
             <section class="cta-area cta-area-v1 pt-60">
-                <div class="container-1450">
-                    <div class="cta-wrapper dark-blue-bg">
+                <div class="container-1450" id="reg">
+                    <div class="cta-wrapper dark-blue-bg" >
                         <!-- <div class="cta-img1 wow fadeInDown"><img src="assets/images/register1.jpg" alt="Img"></div>   change to assets/images/register.png and duplicate membership template-->
                         <div class="row mt-50 justify-content-center align-items-center">
                             <!-- <div class="col-xl-6 col-lg-6 mb-50">
