--- a/reg.html
+++ b/reg.html
@@ -130,6 +130,32 @@
         <!--====== End Page-banner section ======-->
 
         <!--====== Start Team Section ======-->
+        <section class="cta-area cta-area-v1 pt-60">
+            <div class="container-1450" id="register">
+                <div class="cta-wrapper dark-blue-bg" >
+                    <!-- <div class="cta-img1 wow fadeInDown"><img src="assets/images/register1.jpg" alt="Img"></div>   change to assets/images/register.png and duplicate membership template-->
+                    <div class="row mt-50 justify-content-center align-items-center">
+                        <!-- <div class="col-xl-6 col-lg-6 mb-50">
+                            <div class="cta-img1 wow fadeInDown"><img src="assets/images/register1.jpg" alt="Img"></div>   \
+                        </div> -->
+                        <div class="col-xl-6 col-lg-12 mb-50 portfolio-style-one" id="reg">
+                            <div class="img-holder">
+                                <img src="assets\images\Registration\Smash 2.0.jpg" alt=""><a href="assets\images\Registration\Smash 2.0.jpg" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
+                            </div>
+                        </div>
+                        <div class="col-xl-6 col-lg-12" id="register">
+                            <div class="text-wrapper wow fadeInUp ml-15">
+                                <div class="section-title section-title-white mb-5">
+                                    <h2><span class="sub-title">SMASH 2.0<br><br></span></h2><!--<span class="fill-text"></span>-->
+                                    <h2 align="left"><span class="fill-text">Smash it up for charity!</span>Your game, Their gain - <span class="fill-text"> Register Now </span> And Let your smashes make an Impact </h2>
+                                </div>
+                                <a href="https://docs.google.com/forms/d/e/1FAIpQLScMncmMN9FCto760u8-p8riNaz4SH4AekE72dG_ITt2IrYjCQ/viewform" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="team-area team-area-v3 light-gray-bg pt-30 pb-30 position-relative z-1">
             <div class="shape shape-one scene"><span data-depth="1"><img src="assets/images/shape/shape-7.png" alt=""></span></div>
             <div class="shape shape-two scene"><span data-depth="2"><img src="assets/images/shape/shape-12.png" alt=""></span></div>
@@ -144,7 +170,7 @@
                         </div>
                     </div>
                 </div> -->
-                <div id="register" class="row">
+                <!-- <div id="register" class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12 mx-auto">
                         <div id="register" class="team-item mb-55 wow fadeInUp mx-auto" data-wow-delay=".10s">
                             <div class="text text-center">
@@ -156,7 +182,7 @@
                 </div>
                 <div class="row justify-content-center mb-50">
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScMncmMN9FCto760u8-p8riNaz4SH4AekE72dG_ITt2IrYjCQ/viewform?embedded=true" width="700" height="1040" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-                </div>
+                </div> -->
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="section-title text-center mb-55 wow fadeInUp">
