--- a/team.html
+++ b/team.html
@@ -762,7 +762,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="col-lg-3 col-md-6 col-sm-6 mx-auto">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".40s">
                             <div class="img-holder">
                                 <img src="assets/images/team/Srinidhi sankaran .jpg" alt="">
@@ -774,7 +774,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="col-lg-3 col-md-6 col-sm-6 mx-auto">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".40s">
                             <div class="img-holder">
                                 <img src="assets/images/team/Anirudhh .jpg" alt="">
@@ -786,7 +786,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="col-lg-3 col-md-6 col-sm-6 mx-auto">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".45s">
                             <div class="img-holder">
                                 <img src="assets/images/team/Vasanth 1.jpeg" alt="">
@@ -798,7 +798,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="col-lg-3 col-md-6 col-sm-6 mx-auto">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".40s">
                             <div class="img-holder">
                                 <img src="assets/images/team/Akash.jpeg" alt="">
