index page changes

--- a/Initiatives.html
+++ b/Initiatives.html
@@ -164,6 +164,22 @@
                     </div>
                 </div>
                 <div class="row portfolio-grid">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-8">
+                        <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".4s">
+                            <div class="img-holder">
+                                <img src="assets/images/portfolio/pongal பண்டிகை.png" alt="Img">
+                                <a href="Event - Pongal பண்டிகை.html" class="portfolio-hover">
+                                    <div class="hover-content">
+                                        <i class="far fa-external-link"></i>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="text">
+                                <h3 class="title"><a href="Event - Pongal பண்டிகை.html">Pongal பண்டிகை</a></h3>
+                                <a class="cat-link">18/01/2024</a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
@@ -310,19 +326,19 @@
                             </div>
                         </div>
                     </div>
-                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-8">
+                    <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-12">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".5s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/walkalong.JPG" alt="Img">
-                                <a href="Event - Walk Along.html" class="portfolio-hover">
+                                <img src="assets\images\portfolio\yia23.jpeg" alt="Img">
+                                <a href="Event - Yi Chennai Annual Day 2023.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Walk Along.html">Walk Along</a></h3>
-                                <a class="cat-link">20/08/2023</a>
+                                <h3 class="title"><a href="Event - Yi Chennai Annual Day 2023.html">Yi Annual Day 2023</a></h3>
+                                <a class="cat-link">07/12/2023</a>
                             </div>
                         </div>
                     </div>
