--- a/Initiatives.html
+++ b/Initiatives.html
@@ -167,15 +167,15 @@
                     <div class="col-lg-4 col-md-6 col-sm-6 portfolio-column cat-5 cat-8">
                         <div class="portfolio-item portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".4s">
                             <div class="img-holder">
-                                <img src="assets/images/portfolio/pongal பண்டிகை.png" alt="Img">
-                                <a href="Event - Pongal பண்டிகை.html" class="portfolio-hover">
+                                <img src="assets/images/portfolio/pongal pandigai.png" alt="Img">
+                                <a href="Event - Pongal pandigai.html" class="portfolio-hover">
                                     <div class="hover-content">
                                         <i class="far fa-external-link"></i>
                                     </div>
                                 </a>
                             </div>
                             <div class="text">
-                                <h3 class="title"><a href="Event - Pongal பண்டிகை.html">Pongal பண்டிகை</a></h3>
+                                <h3 class="title"><a href="Event - Pongal pandigai.html">Pongal பண்டிகை</a></h3>
                                 <a class="cat-link">18/01/2024</a>
                             </div>
                         </div>
