--- a/Event - Yi Chennai Annual Day 2023.html
+++ b/Event - Yi Chennai Annual Day 2023.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <!--====== Title ======-->
-        <title>YUVA REC Build And Connect</title>
+        <title>YUVA REC Yi Chennai Annual Day 2023</title>
         <!--====== Favicon Icon ======-->
         <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/png">
         <!--====== Default css ======-->
