--- a/team.html
+++ b/team.html
@@ -2396,7 +2396,7 @@
                                         </div>
                                     <div class="overlay" id="overlay1"></div>
                                     <div class="pop" id="popup1" >
-                                        <section class="team-area team-area-v2 pt-30 pb-130">
+                                        <section class=" pt-30 pb-130">
                                             <div class="container">
                                                     <span class="close-btn" onclick="closePopup1()">&times;</span>                                     
                                                 <div class="row justify-content-center">
@@ -2411,7 +2411,7 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".10s">
+                                                        <div class="portfolio-item portfolio-style-two mb-50 wow fadeInUp" data-wow-delay=".10s">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/madhuvantichair.png" alt="">
                                                             </div>
