--- a/team.html
+++ b/team.html
@@ -2396,12 +2396,12 @@
                                         </div>
                                     <div class="overlay" id="overlay1"></div>
                                     <div class="pop" id="popup1" >
-                                        <section class=" pt-30 pb-130">
+                                        <section class="team-area team-area-v2 pt-30 pb-130">
                                             <div class="container">
                                                     <span class="close-btn" onclick="closePopup1()">&times;</span>                                     
                                                 <div class="row justify-content-center">
                                                     <div class="col-lg-8">
-                                                        <div class="section-title text-center mb-55 wow fadeInUp">
+                                                        <div class="section-title text-center mb-55">
                                                             
                                                             <h4 style= "color:#5956e9;">More than a Team, a Force for Positive Transformation<br><b>YUVA  2022 - 23</b></h4>
                                                             <br>
@@ -2411,7 +2411,7 @@
                                                 </div>
                                                 <div class="row">
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="portfolio-item portfolio-style-two mb-50 wow fadeInUp" data-wow-delay=".10s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/madhuvantichair.png" alt="">
                                                             </div>
@@ -2422,7 +2422,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".15s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/ric.jpg" alt="">
                                                             </div>
@@ -2434,7 +2434,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".20s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/santhosh SD.jpg" alt="">
                                                             </div>
@@ -2446,7 +2446,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".25s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/Nivedhitha1.jpg" alt="">
                                                             </div>
@@ -2458,7 +2458,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".30s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/harini.png" alt="">
                                                             </div>
@@ -2470,7 +2470,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".35s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/varsheni.png" alt="">
                                                             </div>
@@ -2482,7 +2482,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".40s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/sanjana.png" alt="">
                                                             </div>
@@ -2494,7 +2494,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".45s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/mogesh1.jpeg" alt="">
                                                             </div>
@@ -2506,7 +2506,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".45s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/Senthamizh Arasan.jpg" alt="">
                                                             </div>
@@ -2518,7 +2518,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".45s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/sruthilaya.png" alt="">
                                                             </div>
@@ -2530,7 +2530,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".40s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/Joshna james.JPG" alt="">
                                                             </div>
@@ -2542,7 +2542,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".45s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/soundarya.png" alt="">
                                                             </div>
@@ -2554,7 +2554,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".40s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/Roshni 1.jpeg" alt="">
                                                             </div>
@@ -2566,7 +2566,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".45s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/preetha.png" alt="">
                                                             </div>
@@ -2578,7 +2578,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".40s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/yoga.png" alt="">
                                                             </div>
@@ -2590,7 +2590,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".45s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/aalia.jpg" alt="">
                                                             </div>
@@ -2602,7 +2602,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".40s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/guna1.jpeg" alt="">
                                                             </div>
@@ -2614,7 +2614,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".45s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/aakash.jpg" alt="">
                                                             </div>
@@ -2626,7 +2626,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".40s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/Pritika.jpg" alt="">
                                                             </div>
@@ -2638,7 +2638,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".45s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/mithran1.jpeg" alt="">
                                                             </div>
@@ -2650,7 +2650,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="mx-auto col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".40s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/sundar.png" alt="">
                                                             </div>
@@ -2662,7 +2662,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="mx-auto col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".40s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/noor.png" alt="">
                                                             </div>
@@ -2674,7 +2674,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="mx-auto col-lg-3 col-md-6 col-sm-6">
-                                                        <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".40s">
+                                                        <div class="team-item mb-55">
                                                             <div class="img-holder">
                                                                 <img src="assets/images/team/ritha.png" alt="">
                                                             </div>
