--- a/team.html
+++ b/team.html
@@ -915,7 +915,7 @@
                             </div>
                         </div> -->
                         <div class="col-lg-4 col-md-6 col-sm-6">
-                            <div class=" portfolio-style-two mb-55 wow fadeInUp" data-wow-delay=".45s">
+                            <div class=" portfolio-style-two mb-55 wow fadeInUp" data-wow-delay=".2s">
                                 <div class="img-holder" >
                                     <img src="assets/images/team/madhuvantichair.png" alt="" id="triggerImage" onclick="openPopup1()" style="width: 100%; height: auto;" > 
                                     <div class="wow fadeInUp portfolio-hover" data-wow-delay="1s">
@@ -1480,7 +1480,7 @@
                             </div>
                         </div>
                         <div class="portfolio-item portfolio-style-two col-lg-4 col-md-6 col-sm-6">
-                            <div class=" mb-55 wow fadeInUp" data-wow-delay=".45s">
+                            <div class=" mb-55 wow fadeInUp" data-wow-delay=".3s">
                                 <div class="img-holder">
                                     <img src="assets/images/team/sanjay1.jpg" alt="" id="triggerImage" onclick="openPopup2()" style="width: 100%; height: auto;" >
                                     <div class="wow fadeInUp portfolio-hover" data-wow-delay="1s">
@@ -2103,12 +2103,12 @@
                             </div>
                         </div>
                         <div class="portfolio-item portfolio-style-two col-lg-4 col-md-6 col-sm-6">
-                            <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".45s">
+                            <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".4s">
                                 <div class="img-holder">
                                     <img src="assets/images/team/Nidhuna Jose.jpg" alt="" id="triggerImage" onclick="openPopup3()" style="width: 100%; height: auto;"  >
                                     <div class="wow fadeInUp portfolio-hover" data-wow-delay="1s">
                                         <div class="wow fadeInUp hover-content" data-wow-delay="1s">
-                                            <a onclick="openPopup3()"class="cat-btn">Click</a>
+                                            <h4 onclick="openPopup3()"class="cat-btn">Click</h4>
                                             <h4 onclick="openPopup3()">Unveil YUVA' s Power</h4>
                                         </div>
                                     </div>
@@ -2121,7 +2121,7 @@
                                                     <div class="col-lg-8">
                                                         <div class="section-title text-center mb-55">
                                                             <!--<span class="sub-title st-one">Council Members</span>-->
-                                                         <h4 style= "color:#5956e9;">Champions of change, leaders of tomorrow<br><b>YUVA  2020 - 21</b></h4>
+                                                         <h4 style= "color:#5956e9;">Champions of change, Leaders of tomorrow<br><b>YUVA  2020 - 21</b></h4>
                                                             <br>
                                                             <h2>Council Members</h2>
                                                         </div>
