--- a/Event - Pongal pandigai.html
+++ b/Event - Pongal pandigai.html
@@ -181,7 +181,7 @@
                             </div>
                             <div class="text">
                                 <h4>Target Audience</h4>
-                                <p>Vidya Sagar Students</p>
+                                <p>Vidya Sagar School Students</p>
                             </div>
                         </div>
                     </div>
