--- a/Gallery.html
+++ b/Gallery.html
@@ -135,6 +135,22 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
+                                <img src="assets/images/Events/Pongal pandigai/img 10.jpg" alt="">
+                                <a href="assets/images/Events/Pongal pandigai/img 10.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Pongal pandigai/img 8.jpg" alt="">
+                                <a href="assets/images/Events/Pongal pandigai/img 8.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
                                 <img src="assets/images/Events/Yi Annual Day 2023/91.jpeg" alt="">
                                 <a href="assets/images/Events/Yi Annual Day 2023/91.jpeg" class="portfolio-hover img-popup"></a>
                             </div>
@@ -143,24 +159,8 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/lumos/8.jpg" alt="">
-                                <a href="assets/images/Events/lumos/8.jpg" class="portfolio-hover img-popup"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
-                            <div class="img-holder">
-                                <img src="assets/images/Events/Instolutions 2.0/18.jpeg" alt="">
-                                <a href="assets/images/Events/Instolutions 2.0/18.jpeg" class="portfolio-hover img-popup"></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3 col-md-6 col-sm-12">
-                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
-                            <div class="img-holder">
-                                <img src="assets/images/Events/lumos/3.jpg" alt="">
-                                <a href="assets/images/Events/lumos/3.jpg" class="portfolio-hover img-popup"></a>
+                                <img src="assets/images/Events/Akshayapatra3.0/8.jpg" alt="">
+                                <a href="assets/images/Events/Akshayapatra3.0/8.jpg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
@@ -175,6 +175,14 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
+                                <img src="assets/images/Events/Instolutions 2.0/18.jpeg" alt="">
+                                <a href="assets/images/Events/Instolutions 2.0/18.jpeg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
                                 <img src="assets/images/Events/Instolutions 2.0/5.jpeg" alt="">
                                 <a href="assets/images/Events/Instolutions 2.0/5.jpeg" class="portfolio-hover img-popup"></a>
                             </div>
@@ -183,8 +191,32 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
                             <div class="img-holder">
+                                <img src="assets/images/Events/lumos/8.jpg" alt="">
+                                <a href="assets/images/Events/lumos/8.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/lumos/3.jpg" alt="">
+                                <a href="assets/images/Events/lumos/3.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
                                 <img src="assets/images/Events/lumos/2.jpg" alt="">
                                 <a href="assets/images/Events/lumos/2.jpg" class="portfolio-hover img-popup"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-12">
+                        <div class="portfolio-style-one mb-55 wow fadeInUp" data-wow-delay=".15s">
+                            <div class="img-holder">
+                                <img src="assets/images/Events/Yuvaneta23/4.jpeg" alt="">
+                                <a href="assets/images/Events/Yuvaneta23/4.jpeg" class="portfolio-hover img-popup"></a>
                             </div>
                         </div>
                     </div>
