Removing smash reg

--- a/index.html
+++ b/index.html
@@ -150,23 +150,19 @@
             <section class="cta-area cta-area-v1 pt-60">
                 <div class="container-1450" id="reg">
                     <div class="cta-wrapper dark-blue-bg" >
-                        <!-- <div class="cta-img1 wow fadeInDown"><img src="assets/images/register1.jpg" alt="Img"></div>   change to assets/images/register.png and duplicate membership template-->
                         <div class="row mt-50 justify-content-center align-items-center">
-                            <!-- <div class="col-xl-6 col-lg-6 mb-50">
-                                <div class="cta-img1 wow fadeInDown"><img src="assets/images/register1.jpg" alt="Img"></div>   \
-                            </div> -->
                             <div class="col-xl-6 col-lg-6 mb-50 portfolio-style-one" id="reg">
                                 <div class="img-holder">
-                                    <img src="assets\images\Registration\Smash 2.0.jpg" alt=""><a href="assets\images\Registration\Smash 2.0.jpg" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
+                                    <img src="assets\images\Registration\membership23.png" alt="Img"><a href="assets\images\Registration\membership23.png" class="portfolio-hover img-popup"></a>   <!--change to assets/images/register.png-->
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6" id="register">
                                 <div class="text-wrapper wow fadeInUp ml-15">
                                     <div class="section-title section-title-white mb-5">
-                                        <h2><span class="sub-title">SMASH 2.0<br><br></span></h2><!--<span class="fill-text"></span>-->
-                                        <h2 align="left"><span class="fill-text">Smash it up for charity!</span>Your game, Their gain - <span class="fill-text"> Register Now </span> And Let your smashes make an Impact </h2>
+                                        <h2><span class="sub-title">Membership Drive 2023-24<br><br></span></h2><!--<span class="fill-text"></span>-->
+                                        <h2 align="left"><span class="fill-text">Join Us in </span> being the Change <span class="fill-text"> you want to see</span><br><br><span class="fill-text"> Join Us now </span></h2>
                                     </div>
-                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScMncmMN9FCto760u8-p8riNaz4SH4AekE72dG_ITt2IrYjCQ/viewform" width="640" height="894" frameborder="0" marginheight="0" marginwidth="0" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
+                                    <a href="reg.html#register" class="main-btn bordered-btn btn-white arrow-btn">Register!</a>
                                 </div>
                             </div>
                         </div>
