--- a/Event - Pongal pandigai.html
+++ b/Event - Pongal pandigai.html
@@ -181,11 +181,7 @@
                             </div>
                             <div class="text">
                                 <h4>Target Audience</h4>
-<<<<<<< Updated upstream
-                                <p>Vidya Sagar School Students</p>
-=======
-                                <p>90 cognitively Disabled Children and 25 YUVAs</p>
->>>>>>> Stashed changes
+                                <p>70 Cognitively Disabled Children</p>
                             </div>
                         </div>
                     </div>
@@ -362,7 +358,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-12">
                         <div class="team-item mb-55 wow fadeInUp" data-wow-delay=".25s">
                             <div class="img-holder">
-                                <img src="assets/images/Events/Pongal pandigai/img 19.jpg" alt="">
+                                <img src="assets/images/Events/Pongal pandigai/img 20.jpg" alt="">
                             </div>
                            
                         </div>
