--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
         <section class="about-area about-area-v1 position-relative pt-130">
             <div  class="container">
                 <div class="row justify-content-center">
-                    <div class=" col-lg-6 col-xl-6">
+                    <div style="display:grid;place-items:center;" class="col-lg-6 col-xl-6">
+                    <!--<div class=" col-lg-6 col-xl-6">
                         <div class="img-holder video-container wow fadeInLeft">
                             <div style="border-radius: 90px; overflow: hidden;">
                                 <video autoplay loop muted>
@@ -186,13 +187,13 @@
                                 </video>
                             </div>
                         </div>
-                       <!----</div>
+                       <!----</div>-->
                         <div class="img-holder-box mb-50">
                             <div class=" wow fadeInLeft">
                                 <img style="border-radius:5%" src="assets/images/about/about-1.png" alt="Image">
                             </div>
                             
-                        </div>-->
+                        </div>
                     </div>
                     <div class="col-lg-6 col-xl-6">
                         <div class="text-wrapper mb-50 wow fadeInRight">
